<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical" >

    <Button
        android:id="@+id/btnListContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/list_of_contacts"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCreateContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginRight="20dp"
        android:text="@string/create_contact" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@drawable/buttons"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_marginRight="20dp"
        android:text="@string/logout" />

    </LinearLayout>
</LinearLayout>