<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".Login">

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_form"
            android:orientation="vertical" >


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/lock"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"

                />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Please enter e-mail adress"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Please enter your password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                >

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttons"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="@drawable/buttons"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tvReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password_reset_here"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


        </LinearLayout>

    
    
</LinearLayout>